fix(dp-box): remove the overflow-hidden in the box-shadow mixin

--- a/assets/scss/modules/_box.scss
+++ b/assets/scss/modules/_box.scss
@@ -15,5 +15,4 @@
   min-height: $min-height;
   border: 1px solid $color;
   box-shadow: 0 0 0 4px rgba($color, 0.3);
-  overflow: hidden;
 }
